# SVGFonts

font-converter/: LICENSE  SVGFontConverter.cabal
font-converter/src/: Main.hs
font-converter/src/Graphics/SVGFonts/FontConverter/: Show.hs  Types.hs  Utils.hs
