Name:             SVGFontConverter
Version:          0.1
Synopsis:         Convert fonts from the SVG-Font format to Haskell source.
Description:      Convert fonts from the SVG-Font format to Haskell source.
category:         Graphics
License:          BSD3
License-file:     LICENSE
Author:           Jan Bracker <jan.bracker@googlemail.com>
Maintainer:       diagrams-discuss@googlegroups.com
build-type:       Custom
Cabal-Version:    >=1.10

source-repository head
  type: git
  location: https://github.com/diagrams/SVGFonts.git

Executable SVGFontConverter
  Build-Depends: base               >= 3 && < 5
               , containers         >= 0.4 && < 0.6
               , data-default-class < 0.1
               , diagrams-lib       >= 0.6
               , directory          >= 1.1
               , split
               , text
               , tuple
               , vector
               , vector-space
               , xml
               , SVGFonts          >= 1.0
  Main-is: Main.hs
  Hs-Source-Dirs: src
  ghc-options: -W -Wall -O2
  default-language: Haskell2010